AP-14034: Utilizing data URLs to enable local uploads
AP-14034 (Enable file upload widget to work in the AP)